--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
     "name": "simple-storage",
     "version": "0.2.0",
+    "description": "DICOM image viewer service",
     "main": "src/app.js",
     "scripts": {
         "start": "node ."
     },
+    "author": "Pavel Zaytsev",
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.18.2"
