--- a/dcm2jpg/dcm2jpg.csproj
+++ b/dcm2jpg/dcm2jpg.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="fo-dicom.ImageSharp" Version="4.0.8" />
-    <PackageReference Include="fo-dicom.NetCore" Version="4.0.8" />
+    <PackageReference Include="fo-dicom" Version="5.2.2" />
+    <PackageReference Include="fo-dicom.Imaging.ImageSharp" Version="5.2.2" />
   </ItemGroup>
 
 </Project>
